# sepa_ai

./: .env.example  .gitignore  BUILD_STATUS.md  Makefile  PHASE2_PROMPTS.md  PROJECT_DESIGN.md  PROMPTS.md  USER_GUIDE.md  list.xlsx  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
alerts/: alert_deduplicator.py  email_alert.py  telegram_alert.py
api/: auth.py  deps.py  main.py  rate_limit.py
api/routers/: health.py  portfolio.py  run.py  stocks.py  watchlist.py
api/schemas/: __init__.py  common.py  portfolio.py  stock.py
backtest/: engine.py  metrics.py  portfolio.py  regime.py  report.py
config/: logging.yaml  settings.yaml  symbol_aliases.yaml  universe.yaml
dashboard/: app.py
dashboard/components/: __init__.py  charts.py  metrics.py  tables.py
dashboard/pages/: 01_Watchlist.py  02_Screener.py  03_Stock.py  04_Portfolio.py  05_Backtest.py
data/: minervini.db
deploy/: README.md  install.sh  minervini-api.service  minervini-daily.service  minervini-daily.timer  minervini-dashboard.service
docs/: RUNBOOK.md
features/: atr.py  feature_store.py  moving_averages.py  pivot.py  relative_strength.py  sector_rs.py  vcp.py  volume.py
frontend/: .env.example  .env.local.example  .env.production  README.md  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ApiOfflineBanner.tsx  CandlestickChart.tsx  FundamentalsCard.tsx  NavBar.tsx  PortfolioSummary.tsx  QualityBadge.tsx  ScoreGauge.tsx  Skeleton.tsx  StockTable.tsx  TrendTemplateCard.tsx  VCPCard.tsx
frontend/lib/: api.ts  types.ts
ingestion/: __init__.py  angel_one_source.py  base.py  fundamentals.py  fundamentals_screener.py  fundamentals_yfinance.py  news.py  nsepython_universe.py  source_factory.py  universe_loader.py  upstox_source.py  validator.py  yfinance_source.py
llm/: explainer.py  llm_client.py
llm/prompt_templates/: trade_brief.j2  watchlist_summary.j2
paper_trading/: order_queue.py  portfolio.py  report.py  simulator.py
pipeline/: context.py  runner.py  scheduler.py
reports/: chart_generator.py  daily_watchlist.py
reports/templates/: watchlist.html.j2
rules/: entry_trigger.py  fundamental_template.py  risk_reward.py  scorer.py  stage.py  stop_loss.py  trend_template.py  vcp_rules.py
screener/: pipeline.py  pre_filter.py  results.py
scripts/: __init__.py  backtest_runner.py  bootstrap.py  create_test_fixtures.py  rebuild_features.py  reset.py  run_daily.py
storage/: __init__.py  parquet_store.py  sqlite_store.py
tests/: conftest.py
tests/fixtures/: sample_fundamentals.json  sample_news_articles.json  sample_watchlist.csv  sample_watchlist.json
tests/integration/: test_api_e2e.py  test_backtest_e2e.py  test_feature_pipeline_e2e.py  test_known_setups.py  test_pipeline_e2e.py  test_screener_batch.py
tests/smoke/: test_smoke.py
tests/unit/: test_alert_deduplicator.py  test_api_auth.py  test_api_main.py  test_api_portfolio.py  test_api_stocks.py  test_api_watchlist.py  test_atr.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_report.py  test_backtest_runner.py  test_chart_generator.py  test_coverage_gaps.py  test_daily_watchlist.py  test_dashboard_components.py  test_entry_trigger.py  test_explainer.py  test_feature_benchmark.py  test_feature_store.py  test_fundamental_template.py  test_fundamentals.py  test_lineage.py  test_llm_client.py  test_news.py  (+25 more)
utils/: __init__.py  date_utils.py  exceptions.py  logger.py  math_utils.py  trading_calendar.py
(+4 files in other folders)
