[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sepa_ai"
version = "1.0.0"
description = "Minervini SEPA Stock Analysis System for NSE / Indian Equities"
readme = "PROJECT_DESIGN.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = []   # managed via requirements.txt

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "black>=24.3.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "ingestion*", "features*", "rules*", "screener*",
    "paper_trading*", "llm*", "pipeline*", "backtest*",
    "alerts*", "reports*", "storage*", "utils*",
    "api*", "dashboard*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
